--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "fork-ts-checker-webpack-plugin": "^5.0.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0",
     "vue-loader-v16": "^16.0.0-beta.5.4"
