--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 Thumbs.db
 UserInterfaceState.xcuserstate
 $RECYCLE.BIN/
-
+/.env
 *.log
 log.txt
 npm-debug.log*
@@ -29,3 +29,5 @@ npm-debug.log*
 /platforms
 /plugins
 /www
+src/.env
+src/.env
