--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ionic/pwa-elements": "^3.0.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
+    "@supabase/supabase-js": "^1.6.0",
     "axios": "^0.21.1",
     "babel": "^6.23.0",
     "body-parser": "^1.19.0",
