--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "qs": "^6.9.6",
+    "sweetalert2": "^10.15.6",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0"
