--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "axios": "^0.21.1",
     "babel": "^6.23.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "jquery": "^3.6.0",
     "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "qs": "^6.9.6",
     "sweetalert2": "^10.15.6",
     "vue": "^3.0.0-0",
