--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@asigloo/vue-dynamic-forms": "^3.14.0",
     "@capacitor/core": "2.4.6",
     "@ionic-native/video-player": "^5.32.1",
     "@ionic/pwa-elements": "^3.0.2",
